--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 server.port=8080
+
+spring.servlet.multipart.max-file-size=5MB
+
+opencv.imageMarkFile=D:/app/opencv/wm.png
+opencv.outputImageDir=D:/app/opencv/outPutImg
+opencv.uploadImageDir=D:/app/opencv/uploadImageDir
