图片水印已经可以正确解出

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,6 @@ server.port=8080
 
 spring.servlet.multipart.max-file-size=5MB
 
-opencv.imageMarkFile=D:/app/opencv/wm.png
+opencv.imageMarkFile=D:/app/opencv/favicon-32x32.png
 opencv.outputImageDir=D:/app/opencv/downloadImg
 opencv.uploadImageDir=D:/app/opencv/uploadImage
